[gd_scene load_steps=7 format=3 uid="uid://io7suhye10np"]

[ext_resource type="Script" path="res://scenes/ui/player_card/player_card.gd" id="1_ulmps"]
[ext_resource type="Texture2D" uid="uid://dsqnqusaaptnj" path="res://assets/Backside.png" id="1_x60h0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j8oy6"]
bg_color = Color(0.588235, 0.588235, 0.694118, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_8gifc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.588235, 0.588235, 0.694118, 1)]
}

[sub_resource type="Animation" id="Animation_xacup"]
resource_name = "flash"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.537255, 0.686275, 0.729412, 1), Color(0.0588235, 0.698039, 0, 1), Color(0.537255, 0.686275, 0.729412, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mpga2"]
_data = {
"RESET": SubResource("Animation_8gifc"),
"flash": SubResource("Animation_xacup")
}

[node name="PlayerCard" type="PanelContainer"]
custom_minimum_size = Vector2(100, 70)
offset_right = 100.0
offset_bottom = 70.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j8oy6")
script = ExtResource("1_ulmps")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bob"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="HandSizeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_x60h0")
expand_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mpga2")
}
